Added updated resume as of May 30, 2024

--- a/assets/resume/main.tex
+++ b/assets/resume/main.tex
@@ -3,94 +3,94 @@
 
 \begin{document}
 
-\namesection{Harshit}{Agrawal}{  \href{mailto:harshit.agrawal.work@gmail.com}{harshit.agrawal.work@gmail.com} | +91 7016004637
+\namesection{}{Harshit Agrawal}{  \href{mailto:harshit.agrawal.work@gmail.com}{harshit.agrawal.work@gmail.com} | \href{https://harshitcodex.github.io}{harshitcodex.github.io} | \href{https://www.linkedin.com/in/harshitnitt/}{LinkedIn} | {Bangalore, India}
 }
 
 \begin{minipage}[t]{0.31\textwidth}
 
 \section{Education} 
 
-\subsection{NIT, Trichy - B.Tech}
+\subsection{\href{https://www.nitt.edu/}{NIT, Trichy - B.Tech}}
 
 \descript{Major in Computer Science}
 \descript{Minor in Economics}
-\location{Expected May 2022 | Trichy, India\\ Cum. GPA: 9.58/10.00}
+\location{May 2022 | Trichy, India\\ CGPA: 9.52/10.00 (Bronze Medallist)}
 \sectionsep
 
-\subsection{Devi Academy Senior}
-\subsection{Secondary School}
-\descript{Grad. April 2016 | Chennai}
-CBSE : CGPA - 10.0/10.0 \\
-\descript{Grad. April 2018 | Chennai}
-CBSE : 93.6 \%
-\sectionsep
+\subsection{\href{https://www.rfs.edu.in/jamnagar/}{K D Ambani Vidyamandir}}
+\location{Grad. May 2018|  Jamnagar, India}
+Class 12 : 94.8 \% \\
+Class 10 : 10 CGPA\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     LINKS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Links} 
-\textbf{GitHub}: \href{https://github.com/avikumar15}{@avikumar15} \\
-\textbf{LinkedIn}: \textbf{\href{https://www.linkedin.com/in/avi-kumar-singh-1508}{@avi-kumar-singh-1508}} \\
-\textbf{Codeforces}: \textbf{\href{https://codeforces.com/profile/avikumar15}{@avikumar15}}  \\
-\textbf{HackerRank}:  \textbf{\href{https://www.hackerrank.com/avikumar15?hr_r=1}{@avikumar15}}  \\
+\section{Links}
+\textbf{GitHub}: \href{https://github.com/HarshitCodex}{@HarshitCodex} \\
+\textbf{LinkedIn}: \href{https://www.linkedin.com/in/harshitnitt/}{@HarshitAgrawal} \\
+\textbf{Codechef}: \href{https://www.codechef.com/users/codexharsh}{@codexharsh} \\
+\textbf{Codeforces}: \href{https://codeforces.com/profile/codexharsh}{@codexharsh} \\
+\textbf{Hackerrank}: \href{https://www.hackerrank.com/HELICpros}{@HELICpros} \\
+\textbf{Medium}: \href{https://harshitagrawal1971.medium.com/}{@HarshitAgrawal} \\
 \sectionsep
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     COURSEWORK
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Coursework}
-Data Structure \& Algorithms \\
-Database Management System \\
+\subsection{Undergraduate}
+Deep Learning \\
+Cryptography \\
 Machine Learning \\
-Artificial Intelligence \\
-Operating System \\
-Formal Languages and Automata \\ 
-Combinatorics Graph Theory \\
-% \sectionsep
+Algorithms \& Data Structures\\
+Operating Systems \\
+Computer Networks \\
+Android AppDev \\
+Theory of Computation \\    
+Database Management Systems \\
+Probability \& Graph Theory \\
+\vspace{2mm}
+
+\subsection{Certifications | Online}
+\href{https://www.coursera.org/account/accomplishments/verify/P2RCYNY5PGAA}{Machine Learning} \\
+\href{https://www.coursera.org/account/accomplishments/specialization/certificate/P76AWJ3W5CM4}{Deep Learning Specialization} \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Skills
-% \section{Skills}
-% \subsection{Technical Skills}
-% \descript{Programming Languages}
-% Python \textbullet{} C++ \textbullet{} Java \textbullet{} Kotlin \textbullet{} JavaScript \textbullet{} TypeScript \textbullet{} Go \\
-% \vspace{2mm}
-% \descript{Web Development}
-% HTML \textbullet{} CSS \textbullet{} React \textbullet{} Svelte \textbullet{} NodeJS \textbullet{} Flask \textbullet{} Django \\
-% \vspace{2mm}
-% \descript{App Development}
-% Android Studio \textbullet{} Android Jetpack \\
-% \vspace{2mm}
-% \descript{Tools}
-% Linux \textbullet{} Git \textbullet{} TensorFlow \textbullet{} \\ Docker \textbullet{} MySQL \\
-% \vspace{2mm}
-% \descript{Familiar}
-% Machine Learning \textbullet{} Computer Vision
-% \sectionsep
-
 \section{Skills}
 \descript{Programming Languages} {
-\textbullet{C} \textbullet{C++} \textbullet{Java} \textbullet{Kotlin} \textbullet{Python} \\
+\textbullet{C} \textbullet{C++} \textbullet{Java} \textbullet{Javascript} \textbullet{Kotlin} \textbullet{Python} \\
 }
-\vspace{2mm}
-\descript{Familiar Languages} 
-\textbullet{C\#} \textbullet{Go} \textbullet{JavaScript} \\
-\vspace{2mm}
-\descript{Tools/Tech} 
-\textbullet{CircleCI} \textbullet{Firebase} \textbullet{Game Dev} \textbullet{Git} \textbullet{JUnit Tests} \textbullet{ML} \textbullet{Mobile Dev} \textbullet{Scrapping} \textbullet{Scripts} \textbullet{Web Dev} \\
-\vspace{2mm}
-\descript{Misc}
-\textbullet{Android Jetpack} \textbullet{gRPC} \textbullet{Coroutines} \textbullet{MVVM}
+\vspace{1mm}
+\descript{Familiar Tools \& Tech} {
+\textbullet{Android Dev} \textbullet{FullStack Dev} \textbullet{ML} \textbullet{Matlab} \textbullet{Keras} \textbullet{Pytorch} \textbullet{Scikit} \textbullet{Git} \textbullet{Scripts} \textbullet{React}  \textbullet{Flume} \textbullet{Guice} \textbullet{SQL} \\
+}
 
-%\subsection{Android Development }
-%\textbullet{} RxJava \textbullet{} Android Tests  %\textbullet{}  Canvas  \textbullet{}  SQLite  \textbullet{} MVP  \textbullet{} MVVM  \textbullet{}
-%Rest APIs  \textbullet{} Dagger \textbullet{} Data Binding \textbullet{}  SharedPreferences  \textbullet{} gRPC \textbullet{} Live Data \textbullet{}  Retrofit \textbullet{}Picasso
-%\sectionsep
-% https://drive.google.com/file/d/1vIy0pa7z22vhjB0MadnEut0ej8C5hDI0/view
+\vspace{1mm}
+\descript{Languages}{
+\textbullet{} English \textbullet{}  Hindi\\}
+\vspace{1mm}
+% \descript{Co Curricular}{
+% \textbullet{NIT Trichy Basketball Team 2018-19}\\
+% \textbullet{Jamnagar Basketball Team 2016-17}\\
+% }
 
-\section{Co-Curricular}
-\textbullet{} \href{https://drive.google.com/file/d/1vIy0pa7z22vhjB0MadnEut0ej8C5hDI0/view}{Volunteering Exchange} to \textbf{Hanoi} \\
-\textbullet{} \textbf{Team Leader} Business Development at AIESEC in NITT \\
-\textbullet{} \textbf{Online mentor} of maths for underprivileged students. \\
-\sectionsep
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     PUBLICATIONS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Publications}
+\subsection{ICICC-November, 2021}
+\href{https://link.springer.com/chapter/10.1007/978-981-19-1976-3_4}{K-Weighted Cluster Head Selection in Wireless Sensor Networks} \\
 
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     BLOG
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -100,132 +100,138 @@ Combinatorics Graph Theory \\
 
 \end{minipage} 
 \hfill
-\begin{minipage}[t]{0.67\textwidth} 
+\begin{minipage}[t]{0.66\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
-
-\runsubsection{\textbf{\href{https://www.nitt.edu/academics/departments/cse/vortex/}{Vortex}}}
-\descript{| \textbf{\href{https://github.com/csea-vortex/}{WEBOPS}} | Event Coordinator }
-\location{Jan 2020 – Present | NIT Trichy, India}
+\runsubsection{\href{https://about.google/}{Google India | Workspace Platform}}
+\descript{| SWE III | L4 }
+\location{July 2022 - Present | Bangalore, India}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Coordinated Events of Vortex’20, the Annual National level technical symposium of CSE department, NIT Trichy. Now part of the \textbf{web operations} team.
+\item Working with the Business Insights Platform team to provide fast and accurate metrics of workspace applications to customers through Admin Console.
+\item Created a new infrastructure for scheduling and computing 20+ metrics for more than 400K customers and serving them on the UI with minimal latency over a 12PB+ storage system on BigQuery.
+\item Improved the serving time by 75\% and reduced duplicate logs by >99.5\% along with delivering resource savings of >1.5 SWE years with the new infrastructure design.
+\item Improve Sign-In logs discoverability and robustness by implementing infrastructure for additional 30+ sign-in types to be recorded and served to customer across multiple endpoints.
+\item Designed and implemented multiple ultra-parallel flumes to perform data integrity validations and data comparisons across multiple databases with extremely fast computation and minimal time complexity.
 \end{tightemize}
-\sectionsep
 
-\runsubsection{\textbf{\href{https://www.dailyobjects.com/}{DailyObjects}}}
-\descript{| Application Development Internship }
-\location{December 2019 – January 2020 | New Delhi, India}
+\runsubsection{\href{}{Urvar}}
+\descript{| SWE Internship | Startup }
+\location{September 2021 - March 2022 | Remote}
 % \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Revamped the UI/UX of the \textbf{android app} at DailyObjects. Changes impacted 100,000+ app user. (\textbf{\href{https://play.google.com/store/apps/details?id=com.dailyobjects}{app-link}}) 
-\item Followed a \textbf{test} driven approach to development.
-\item Simplified the app codebase by using \textbf{jetpack libraries}.
+\item Created a marketplace cum social media Android application with Jetpack Compose based frontend using Kotlin and Goland based backend server infratructure hosted on AWS.
+\item Contributed to data collection using Python web scraping and coordinated with the team for product development and discussions with go-to-market strategy
 \end{tightemize}
-\sectionsep
 
-
-\runsubsection{\textbf{\href{https://delta.nitt.edu/}{DELTA FORCE}}}
-\descript{| Software Developer }
-\location{July 2019 – Present | NIT Trichy, India}
-%\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}\item Official Coding Club and \textbf{\href{https://www.nitt.edu/home/webteam/}{web-team}} of NIT Trichy. (\textbf{\href{https://delta.nitt.edu/}{Delta Force}})
-\item Developed multiple android and web-apps for college fests. ( \textbf{\href{https://play.google.com/store/apps/details?id=com.pragyan20.app&hl=en}{Pragyan '20}}, \textbf{\href{https://play.google.com/store/apps/details?id=in.aaveg.aaveg2020&hl=en}{Aaveg '20}},
-\textbf{\href{https://play.google.com/store/apps/details?id=com.nittfest20.app}{NITTFEST '20}}, \textbf{\href{https://play.google.com/store/apps/details?id=com.festember19.app&hl=en}{Festember '19}})  Festember'19 has \textbf{5000+ downloads}.
-\item Mentored a project for Delta Winter of Code 2019-20. (\textbf{\href{https://github.com/avikumar15/photographer}{project link}})
-\item Organised algos bootcamp and mentored freshers (\textbf{App and Game dev})
+\runsubsection{\href{https://spider.nitt.edu/}{Samsung PRISM}}
+\descript{| ML Internship }
+\location{August 2019 - May 2022 | NIT Trichy, India}
+\begin{tightemize}
+\item Worked on Hierarchical Topic labeling by Active learning to create fine grained multi-label app classification for playstore apps.
+\item Used various ML techniques like BERT for topic modeling, LDA for finding topics, etc. to come up with a hierarchical label classification.
 \end{tightemize}
-\sectionsep
+
+\runsubsection{\href{https://www.microsoft.com/en-in}{Microsoft India (R\&D)}}
+\descript{| SWE Internship }
+\location{June 2021 - July 2021 | Noida, India}
+\begin{tightemize}
+\item Worked with special clouds team to create an automated interface for identifying and assigning builds to deployment rings by following certain policy framework using C\#, REST APIs and .NET Core along with deployment process.
+\item Worked on Azure cloud ecosystem using PowerShell and Azure CLI for containerised systems with an overview of Docker and Kubernetes.
+\end{tightemize}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     RESEARCH
+%     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Technical Projects}
-
-\runsubsection{Quick Mail CLI}
-\descript{| Python  |  CLI  |  GitHub - \textbf{\href{https://github.com/avikumar15/quick-mail-cli}{quick-mail-cli}}  | \textbf{\href{https://pypi.org/project/quick-mail/}{PyPI}} }
-
-\location{Dec 2020 – Jan 2021}
+\section{PROJECTS}
+\runsubsection{Multilingual Sentiment Analysis}
+\descript{| \href{https://drive.google.com/file/d/10HliR3vb4GWiJ4kaBfOSs2GwAi8e8JPs/view?usp=sharing}{Thesis : FYP }| NLP Project} 
+\location{December 2021 – May 2022}
 \begin{tightemize}
-\item Developed a \textbf{command-line interface} to send mail quickly and without any hassle.
-\item Utilised \textbf{argparse} and \textbf{google client library}. Followed the concept of abstraction using \textbf{zope}.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{Stock Price Prediction}
-\descript{| ML | GitHub - \textbf{\href{https://github.com/avikumar15/ARIMA-GARCH-modeling}{ARIMA-GARCH-modeling}} }
-
-\location{Nov 2020}
-\begin{tightemize}
-\item Modelled a \textbf{Machine Learning model} to predict stock prices of firms, by using \textbf{ARIMA-GARCH modeling} and \textbf{sentiment analysis} using \textbf{VADER}.
-\item Achieved a \textbf{95\% accurate} model.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{AutoMate}
-\descript{| E-Rickshaw Tracking App | Android App | Spring Boot }
-\location{February 2020}
-
-\begin{tightemize}
-\item Designed a pooling based cab booking application using \textbf{Google Map API}.
-\item Applied a \textbf{dijkstra based algorithm} is used which assigns rickshaw to the passenger. Factors like auto capacity, ETA, destination are considered in this algorithm.
-
-\end{tightemize}
-\sectionsep
-
-\runsubsection{Dalal Street}
-\descript{| ANDROID KOTLIN | GRPC | GO |  \textbf{\href{https://www.pragyan.org/20/projects/}{Web Link}}}
-\location{September 2019 - March 2020}
-
-\begin{tightemize}
-\item Developed a \textbf{virtual stock exchange game} with backend in \textbf{Go} and \textbf{GRPC} for managing communication between backend and frontend. (\textbf{\href{https://github.com/delta/dalal-street-server}{server code}})
-\item Contributed to frontend in app and web. (\textbf{\href{https://github.com/delta/dalal-street-android}{app code}}) (\textbf{\href{https://github.com/delta/dalal-street-web}{web code}})
-\item Implemented \textbf{push notification}, \textbf{OTP} and \textbf{referral code}  features in app.
+\item Worked on improving multilingual sentiment analysis for Indian Languages
+\item Used BERT, LSTM and n-gram models to compare the results
+\item Attempted to create word embeddings by using pretrained language embedding models like fastText.
 \end{tightemize}
 
+\runsubsection{TakeAStand.org}
+\descript{|   \href{https://github.com/HarshitCodex/TakeAStand.org}{Github : TakeAStand} | Social Media Website}
+\location{January 2021 – January 2021}
+\begin{tightemize}
+\item Created a mini social media website to host and join protests using MEN Stack
+\item Worked with MEN stack with HTML,CSS and JS for frontend
+\item Added Maps API for instant location service
+\end{tightemize}
 
-% \runsubsection{UK Police App}
-% \descript{| Android App | GitHub - \textbf{\href{https://github.com/avikumar15/UK-Police}{UK-Police}}}
-% \location{June 2019}
-
+% \runsubsection{DarkSight}
+% \descript{| \href{https://github.com/spider-tronix/Dark-Sight}{Github : DarkSight }| Sangam Project} 
+% \location{December 2019 – March 2021}
 % \begin{tightemize}
-% \item An app to show available UK police and crime data in an organised manner.
-% \item App makes API call to \textbf{\href{https://data.police.uk/}{UK Police}} data.
-% \item App implements concepts of REST API, recycler view, SQLite, Fragments, SharedPreferences, and Swipe Gestures.
+% \item Worked on improving night-vision cameras
+% \item Used Histogram Equalization and U-Net Deep Learning framework
+% % \item Worked with python libraries and automated few processes
+% % \item Used Samba server to ssh from Windows 10 to Raspberry Pi
 % \end{tightemize}
 
-\sectionsep
+% \runsubsection{Stock Analysis}
+% \descript{| \href{https://github.com/HarshitCodex/ARIMA-GARCH-modeling}{Github : ARIMA-NLP }| Stock Sentiment} 
+% \location{September 2020 – November 2020}
+% \begin{tightemize}
+% \item Worked on ARIMA model to map Google S\&P500 stock price
+% % \item Used log differencing and normal differencing to get stationary data
+% \item Scraped stock related news using web scraping techniques in python
+% \item Used NLP techniques with VADER lexicon to generate sentiment score of stock
+% \end{tightemize}
+
+% \runsubsection{Safe Lanes}
+% \descript{| \href{https://github.com/HarshitCodex/Hackverse}{Github : Safe Lanes} | Pragyan Hackathon '19}
+% \location{December 2019 - December 2019 }
+% \begin{tightemize}
+% \item Identified safest route between two points by ML algorithm
+% \item Generated Crime score of each street through Crime dataset 
+% \item Used Random Forest Classifier as ensembling algorithm to predict crime
+% \end{tightemize}
+
+
+% \runsubsection{HANDGUN DETECTOR}
+% \descript{|   \href{https://github.com/HarshitCodex/YOLO_Guns.git}{Github : YOLO Guns}}
+% \location{June 2019 – August 2019}
+% \begin{tightemize}
+% \item Detection and drawing of bounding boxes whenever Handguns are found 
+% \item Worked to design YOLOv3 architecture using Darknet54 framework
+% \item Used Convolutional Neural Networks and FPN with RPN
+% \end{tightemize}
+
+
+% \runsubsection{IMDB Sentiment Analysis}
+% \descript{|   \href{https://github.com/HarshitCodex/DL-ML_Projects/blob/master/IMDB_sentiment_analysis.ipynb}{\bf Github : Sentiment NLP}}
+% \location{March 2019 – April 2019}
+% \begin{tightemize}
+% \item NLP project using Naive Bayes algorithm with Trigram features
+% \item Used Fastai to create bag of words and used NLTK library to enhance model
+% \item Aiming to use LSTM and GRU with Attention modeling to improve accuracy
+% \end{tightemize}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section{Volunteering Experience}
-
-%\runsubsection{Vietnam Youth Icon - 14}
-%\descript{| Teaching Professional }
-%\location{December 2018 – January 2019 | Hanoi, Vietnam }
-%An amazing 6 week long volunteering experience of being a part of VYI-14. The project gave me the opportunity to get out of my safe comfort zone and also make an impact on the youth of Hanoi. The exchange program also allowed me to develop my team working and leadership skills.
-%\sectionsep
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \section{Awards} 
-\begin{tabular}{rll}
-2020&Top 7 teams/ 50 teams& Transfinitte'20 organised by NITT\\
-2020&Top 250 teams/ 2500 teams& Hackverse'20 organised by NITK\\
-2018&Top 8 teams/ 200 teams & Qualified for NumPy second round
-
+\begin{tabular}{lll}
+Google         & \bf Spot Recognition & 7 Times\\
+Google         & \bf Peer Recognition  & 8 Times\\
+AI Hack - Google         & \bf WINNER  & LLM Filter Generator for Search\\
+NIT Trichy         & \bf Gold Medal  & SJ Chainulu Excellence Award(Rank 1 Acad)\\
+% 2018	     & \bf AIR 1024  & KVPY Fellow (Issued by IISc Bangalore)\\
 \end{tabular}
 \sectionsep
 
-
 \end{minipage} 
-\end{document}
+\end{document}  \documentclass[]{article}
